kube/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-mongo
  labels:
    app: chuck-mongo
spec:
  selector:
    matchLabels:
      app: chuck-mongo
      tier: backend
  template:
    metadata:
      labels:
        app: chuck-mongo
        tier: backend
    spec:
      containers:
        - name: mongo
          image: mongo:3.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pvc
              mountPath: /data/db
      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
