kube/shiny-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-shiny
  labels:
    app: chuck-shiny
spec:
  selector:
    matchLabels:
      app: shiny
      tier: frontend
  template:
    metadata:
      labels:
        app: shiny
        tier: frontend
    spec:
      containers:
        - name: chuck
          image: colinfay/chuck:0.0.1
          ports:
            - containerPort: 3838
