kube/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chuck-mongo
  labels:
    app: chuck-mongo
spec:
  ports:
    - port: 27017       
      targetPort: 27017 
  selector:
    app: chuck-mongo
    tier: backend
  clusterIP: None
